--- a/public/index.html
+++ b/public/index.html
@@ -159,31 +159,15 @@
       </button>
     </div>
 
-    <div
-      id="dashboard"
-      class="hidden bg-white dark:bg-gray-800 rounded-2xl shadow-2xl p-8 text-center max-w-md animate-fadeIn transition-all duration-300 transform hover:scale-[1.01]"
-    >
-      <h2
-        class="text-2xl text-primary dark:text-white font-bold mb-4"
-      >
-        Bem-vindo(a), <span id="userName"></span>!
-      </h2>
-      <p class="text-gray-700 dark:text-gray-300 mb-6">
-        Aqui você pode registrar seus pensamentos, memórias e sonhos.
-      </p>
-      <button
-        id="newEntryBtn"
-        class="bg-accent text-primary py-2 px-6 rounded-full shadow-md hover:bg-green-400 transition mb-4"
-      >
-        Iniciar Novo Registro
-      </button>
-      <button
-        id="logoutBtn"
-        class="bg-primary text-white py-2 px-6 rounded-full hover:bg-blue-800 transition"
-      >
-        Sair
-      </button>
-    </div>
+    <div id="dashboard" class="hidden bg-white dark:bg-gray-800 rounded-2xl shadow-2xl p-8 text-center max-w-md animate-fadeIn transition-all duration-300 transform hover:scale-[1.01]">
+  <h2 class="text-2xl text-primary dark:text-white font-bold mb-4">Bem-vindo(a), <span id="userName"></span>!</h2>
+  <p class="text-gray-700 dark:text-gray-300 mb-6">Aqui você pode registrar seus pensamentos, memórias e sonhos.</p>
+  
+  <div class="flex flex-col items-center gap-3">
+    <button id="newEntryBtn" class="bg-accent text-primary py-2 px-6 rounded-full shadow-md hover:bg-green-400 transition">Iniciar Novo Registro</button>
+    <button id="logoutBtn" class="bg-primary text-white py-2 px-6 rounded-full hover:bg-blue-800 transition">Sair</button>
+  </div>
+</div>
 
     <!-- Novo formulário de registro -->
     <div
